<resources>
    <string name="app_name">Simple Travel App</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="create_account">Create Account</string>
    <string name="register_up_to_get_started">Register to get started !</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="welcome">Welcome</string>
    <string name="login_to_continue">Login to continue !</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot paasword?</string>
    <string name="don_t_have_account">Don\'t have account?</string>
    <string name="rate_feedback">Rate/Feedback</string>
    <string name="settings">Settings</string>
    <string name="help_center">Help Center</string>
    <string name="what_is_your_question">What is your Question?</string>


</resources>